# trackTime

./: .env  Cargo.toml  README.md  lol  styles.css
shared/: Cargo.toml
shared/src/: lib.rs
src/: add_issue_form.rs  app.rs  card.rs  main.rs  tracking_card.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20240412232307_start.sql
src-tauri/src/: commands.rs  jira.rs  main.rs  storage.rs
